correction contrastes

--- a/style.css
+++ b/style.css
@@ -19,9 +19,20 @@
 
 /* display background dark color on navbar scroll */
 .navbarScroll.navbarDark {
-    background-color: #5b5b5b;
+    background-color: black;
 }
 
+nav .navbar-nav {
+    background-color: black !important;
+}
+
+nav .navbar-nav li a {
+    color: white !important;
+}
+
+nav .nav-link:hover {
+    color: lightgray !important;
+}
 /* hero background image */
 .bgimage {
     height: 100vh;
@@ -29,6 +40,7 @@
     background: url("images/image1.jpg");
     background-size: cover;
     position: relative;
+    filter: brightness(0.8);
 }
 /* text css above hero image*/
 .hero_title {
